# tapir

./: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  THIRD-PARTY-LICENSE  about.hbs  deny.toml  justfile  release-plz.toml
examples/: Cargo.toml
examples/custom-provider/: Cargo.toml
examples/custom-provider/src/: main.rs
examples/custom-tool/: Cargo.toml
examples/custom-tool/src/: main.rs
examples/hello-agent/: Cargo.toml
examples/hello-agent/src/: main.rs
examples/hooks-and-memory/: Cargo.toml
examples/hooks-and-memory/src/: main.rs
tapir/: CHANGELOG.md  Cargo.toml
tapir-ai/: CHANGELOG.md  Cargo.toml
tapir-ai/src/: auth.rs  config.rs  credentials.rs  lib.rs  message.rs
tapir-ai/src/auth/: copilot.rs
tapir-ai/src/catalog/: mod.rs  models.rs  models_generated.rs
tapir-ai/src/providers/: anthropic.rs  chat.rs  gemini.rs  mod.rs  responses.rs
tapir-core/: CHANGELOG.md  Cargo.toml
tapir-core/src/: agent.rs  command.rs  context.rs  hook.rs  lib.rs  observer.rs  prompts.rs  queue.rs  runtime.rs  session.rs  skills.rs  store.rs
tapir-core/src/tools/: bash.rs  edit.rs  exec.rs  find.rs  fs.rs  grep.rs  jail.rs  ls.rs  mod.rs  read.rs  tool.rs  truncate.rs  walk.rs  write.rs
tapir-core/tests/: live_rounds.rs
tapir/src/: lib.rs
