[workspace]
resolver = "3"
members = ["hello-agent", "custom-provider", "custom-tool", "hooks-and-memory"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tapir = { path = "../tapir" }
anyhow = "1.0.102"
async-trait = "0.1.89"
reqwest = { version = "0.12.27", default-features = false }
serde_json = "1.0.145"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
