[package]
name = "tapir-ai"
version.workspace = true
edition.workspace = true
description = "tapir's LLM layer: providers, model catalog, auth, and the neutral message vocabulary."
license = "ISC"
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
directories.workspace = true
eventsource-stream.workspace = true
futures.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true

[features]
# Test doubles (canned SSE server, body builders) for dependent crates'
# seam tests. tapir-core forwards its own `test-util` to this one.
test-util = []

[lints]
workspace = true
